Updated bibliography, pruned some unnecessary items

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,187 +1,4 @@
 
-@online{centerforhistoryandnewmediazotero,
-  title = {Zotero {{Quick Start Guide}}},
-  url = {http://zotero.org/support/quick_start_guide},
-  timestamp = {2017-02-25T06:54:25Z},
-  author = {{Center for History and New Media}}
-}
-
-@inproceedings{stegeman2014empirically,
-  title = {Towards an Empirically Validated Model for Assessment of Code Quality},
-  url = {http://dl.acm.org/citation.cfm?id=2674702},
-  timestamp = {2014-12-05T11:32:56Z},
-  booktitle = {Proceedings of the 14th {{Koli Calling International Conference}} on {{Computing Education Research}}},
-  publisher = {{ACM}},
-  author = {Stegeman, Martijn and Barendsen, Erik and Smetsers, Sjaak},
-  urldate = {2014-11-24},
-  date = {2014},
-  pages = {99--108}
-}
-
-@article{obrien2009empirically,
-  title = {An Empirically Based Tool for Analyzing Mortality Associated with Congenital Heart~Surgery},
-  volume = {138},
-  issn = {0022-5223},
-  url = {http://www.sciencedirect.com/science/article/pii/S0022522309010174},
-  doi = {10.1016/j.jtcvs.2009.03.071},
-  abstract = {Objective
-Analysis of congenital heart surgery results requires a reliable method of estimating the risk of adverse outcomes. Two major systems in current use are based on projections of risk or complexity that were predominantly subjectively derived. Our goal was to create an objective, empirically based index that can be used to identify the statistically estimated risk of in-hospital mortality by procedure and to group procedures into risk categories.
-Methods
-Mortality risk was estimated for 148 types of operative procedures using data from 77,294 operations entered into the European Association for Cardiothoracic Surgery (EACTS) Congenital Heart Surgery Database (33,360 operations) and the Society of Thoracic Surgeons (STS) Congenital Heart Surgery Database (43,934 patients) between 2002 and 2007. Procedure-specific mortality rate estimates were calculated using a Bayesian model that adjusted for small denominators. Each procedure was assigned a numeric score (the STS–EACTS Congenital Heart Surgery Mortality Score [2009]) ranging from 0.1 to 5.0 based on the estimated mortality rate. Procedures were also sorted by increasing risk and grouped into 5 categories (the STS–EACTS Congenital Heart Surgery Mortality Categories [2009]) that were chosen to be optimal with respect to minimizing within-category variation and maximizing between-category variation. Model performance was subsequently assessed in an independent validation sample (n = 27,700) and compared with 2 existing methods: Risk Adjustment for Congenital Heart Surgery (RACHS-1) categories and Aristotle Basis Complexity scores.
-Results
-Estimated mortality rates ranged across procedure types from 0.3\% (atrial septal defect repair with patch) to 29.8\% (truncus plus interrupted aortic arch repair). The proposed STS–EACTS score and STS–EACTS categories demonstrated good discrimination for predicting mortality in the validation sample (C-index = 0.784 and 0.773, respectively). For procedures with more than 40 occurrences, the Pearson correlation coefficient between a procedure's STS–EACTS score and its actual mortality rate in the validation sample was 0.80. In the subset of procedures for which RACHS-1 and Aristotle Basic Complexity scores are defined, discrimination was highest for the STS–EACTS score (C-index = 0.787), followed by STS–EACTS categories (C-index = 0.778), RACHS-1 categories (C-index = 0.745), and Aristotle Basic Complexity scores (C-index = 0.687). When patient covariates were added to each model, the C-index improved: STS–EACTS score (C-index = 0.816), STS–EACTS categories (C-index = 0.812), RACHS-1 categories (C-index = 0.802), and Aristotle Basic Complexity scores (C-index = 0.795).
-Conclusion
-The proposed risk scores and categories have a high degree of discrimination for predicting mortality and represent an improvement over existing consensus-based methods. Risk models incorporating these measures may be used to compare mortality outcomes across institutions with differing case mixes.},
-  timestamp = {2014-12-05T11:41:12Z},
-  number = {5},
-  journaltitle = {The Journal of Thoracic and Cardiovascular Surgery},
-  shortjournal = {The Journal of Thoracic and Cardiovascular Surgery},
-  author = {O'Brien, Sean M. and Clarke, David R. and Jacobs, Jeffrey P. and Jacobs, Marshall L. and Lacour-Gayet, Francois G. and Pizarro, Christian and Welke, Karl F. and Maruszewski, Bohdan and Tobota, Zdzislaw and Miller, Weldon J. and Hamilton, Leslie and Peterson, Eric D. and Mavroudis, Constantine and Edwards, Fred H.},
-  urldate = {2014-12-05},
-  date = {2009-11},
-  pages = {1139--1153},
-  file = {ScienceDirect Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HU243HM3/O'Brien et al. - 2009 - An empirically based tool for analyzing mortality .pdf:application/pdf;ScienceDirect Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/CPJME92S/S0022522309010174.html:text/html}
-}
-
-@article{hirschfeld2008context-oriented,
-  title = {Context-Oriented {{Programming}}},
-  volume = {7},
-  issn = {1660-1769},
-  url = {http://www.jot.fm/contents/issue_2008_03/article4.html},
-  doi = {10.5381/jot.2008.7.3.a4},
-  timestamp = {2015-09-18T08:34:00Z},
-  number = {3},
-  journaltitle = {Journal of Object Technology},
-  author = {Hirschfeld, Robert and Costanza, Pascal and Nierstrasz, Oscar},
-  date = {2008-03},
-  pages = {125--151},
-  file = {article4.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HEBTNNBD/article4.pdf:application/pdf},
-  groups = {Academic Writing}
-}
-
-@inproceedings{keays2003context-oriented,
-  location = {{New York, NY, USA}},
-  title = {Context-Oriented {{Programming}}},
-  isbn = {1-58113-767-2},
-  url = {http://doi.acm.org/10.1145/940923.940926},
-  doi = {10.1145/940923.940926},
-  timestamp = {2015-10-25T15:07:35Z},
-  booktitle = {Proceedings of the 3rd {{ACM International Workshop}} on {{Data Engineering}} for {{Wireless}} and {{Mobile Access}}},
-  series = {MobiDe '03},
-  publisher = {{ACM}},
-  author = {Keays, Roger and Rakotonirainy, Andry},
-  date = {2003},
-  pages = {9--16},
-  keywords = {context,context-oriented programming,mobile,pervasive,programming,ubiquitous},
-  file = {p9-keays.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/WD54DEKE/p9-keays.pdf:application/pdf},
-  groups = {Academic Writing}
-}
-
-@inproceedings{hirschfeld2013l:,
-  location = {{New York, NY, USA}},
-  title = {L: {{Context}}-Oriented {{Programming}} with {{Only Layers}}},
-  isbn = {978-1-4503-2040-5},
-  url = {http://doi.acm.org/10.1145/2489793.2489797},
-  doi = {10.1145/2489793.2489797},
-  timestamp = {2015-10-25T15:07:48Z},
-  booktitle = {Proceedings of the 5th {{International Workshop}} on {{Context}}-{{Oriented Programming}}},
-  series = {COP'13},
-  publisher = {{ACM}},
-  author = {Hirschfeld, Robert and Masuhara, Hidehiko and Igarashi, Atsushi},
-  date = {2013},
-  pages = {4:1--4:5},
-  keywords = {context-oriented programming,layers,modularity,sideways composition,software composition},
-  file = {a4-hirschfeld.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/74IEG3GZ/a4-hirschfeld.pdf:application/pdf},
-  groups = {Academic Writing}
-}
-
-@inproceedings{ubayashi2013archface4cop,
-  location = {{New York, NY, USA}},
-  title = {{{Archface4COP}}: {{Architectural Interface}} for {{Context}}-Oriented {{Programming}}},
-  isbn = {978-1-4503-2040-5},
-  url = {http://doi.acm.org/10.1145/2489793.2489794},
-  doi = {10.1145/2489793.2489794},
-  timestamp = {2015-10-25T15:08:13Z},
-  booktitle = {Proceedings of the 5th {{International Workshop}} on {{Context}}-{{Oriented Programming}}},
-  series = {COP'13},
-  publisher = {{ACM}},
-  author = {Ubayashi, Naoyasu and Di, Ai and Kamei, Yasutaka},
-  date = {2013},
-  pages = {1:1--1:6},
-  keywords = {architecture,context-oriented programming,interface},
-  file = {a1-ubayashi.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/3QSAWDD8/a1-ubayashi.pdf:application/pdf},
-  groups = {Academic Writing}
-}
-
-@incollection{blackwell2001cognitive,
-  title = {Cognitive Dimensions of Notations: {{Design}} Tools for Cognitive Technology},
-  url = {http://link.springer.com/chapter/10.1007/3-540-44617-6_31},
-  shorttitle = {Cognitive Dimensions of Notations},
-  timestamp = {2016-01-09T12:29:52Z},
-  booktitle = {Cognitive {{Technology}}: {{Instruments}} of {{Mind}}},
-  publisher = {{Springer}},
-  author = {Blackwell, Alan F. and Britton, Carol and Cox, A. and Green, Thomas RG and Gurr, Corin and Kadoda, Gada and Kutar, M. S. and Loomes, Martin and Nehaniv, Chrystopher L. and Petre, Marian and {others}},
-  urldate = {2016-01-09},
-  date = {2001},
-  pages = {325--341},
-  file = {Cognitive_Dimensions_of_Notations_Design_Tools_for_Cognitive_Technology.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/46W2GF36/Cognitive_Dimensions_of_Notations_Design_Tools_for_Cognitive_Technology.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/GUK4GED4/3-540-44617-6_31.html:text/html}
-}
-
-@book{steele2010beautiful,
-  title = {Beautiful Visualization: Looking at Data through the Eyes of Experts},
-  url = {https://books.google.nl/books?hl=en&lr=&id=TKh6fdlKwfMC&oi=fnd&pg=PR5&dq=Beautiful+Visualization+-+Looking+at+Data+Through+the+Eyes+of+Experts&ots=cWPEQ-JTmB&sig=DkmrMSYy8KQ2zvl4K8gBCi_3OdQ},
-  shorttitle = {Beautiful Visualization},
-  timestamp = {2016-01-09T12:37:45Z},
-  publisher = {{" O'Reilly Media, Inc."}},
-  author = {Steele, Julie and Iliinsky, Noah},
-  urldate = {2016-01-09},
-  date = {2010},
-  file = {Beautiful.Visualization.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/N4IPUZ2Q/Beautiful.Visualization.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/AB7WGERZ/books.html:text/html},
-  groups = {Software Evolution}
-}
-
-@book{tufte1983visual,
-  title = {The Visual Display of Quantitative Information},
-  volume = {2},
-  url = {http://www.colorado.edu/UCB/AcademicAffairs/ArtsSciences/geography/foote/maps/assign/reading/TufteCoversheet.pdf},
-  timestamp = {2016-01-24T13:13:28Z},
-  number = {9},
-  publisher = {{Graphics press Cheshire, CT}},
-  author = {Tufte, Edward R. and Graves-Morris, P. R.},
-  urldate = {2016-01-24},
-  date = {1983},
-  file = {[PDF] from colorado.edu:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/DS9DSCQW/Tufte and Graves-Morris - 1983 - The visual display of quantitative information.pdf:application/pdf}
-}
-
-@inproceedings{palomba2014they,
-  title = {Do {{They Really Smell Bad}}? {{A Study}} on {{Developers}}' {{Perception}} of {{Bad Code Smells}}},
-  url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6976076},
-  shorttitle = {Do {{They Really Smell Bad}}?},
-  timestamp = {2016-01-30T12:32:24Z},
-  booktitle = {Software {{Maintenance}} and {{Evolution}} ({{ICSME}}), 2014 {{IEEE International Conference}} On},
-  publisher = {{IEEE}},
-  author = {Palomba, Fabio and Bavota, Gabriele and Di Penta, Massimiliano and Oliveto, Rocco and De Lucia, Andrea},
-  urldate = {2016-01-30},
-  date = {2014},
-  pages = {101--110},
-  file = {[PDF] from unimol.it:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/NI85QVDG/Palomba et al. - 2014 - Do They Really Smell Bad A Study on Developers' P.pdf:application/pdf},
-  groups = {Research Preparation}
-}
-
-@inproceedings{potdar2014exploratory,
-  title = {An {{Exploratory Study}} on {{Self}}-{{Admitted Technical Debt}}},
-  url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6976075},
-  timestamp = {2016-01-30T12:34:22Z},
-  booktitle = {Software {{Maintenance}} and {{Evolution}} ({{ICSME}}), 2014 {{IEEE International Conference}} On},
-  publisher = {{IEEE}},
-  author = {Potdar, Aniket and Shihab, Emad},
-  urldate = {2016-01-30},
-  date = {2014},
-  pages = {91--100},
-  file = {6146a091.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/Q9HJ8W4B/6146a091.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/4WZXUJPV/login.html:text/html},
-  groups = {Research Preparation}
-}
-
 @inproceedings{baumann2016disguised,
   title = {Disguised {{Chromium Browser}}: {{Robust Browser}}, {{Flash}} and {{Canvas Fingerprinting Protection}}},
   url = {http://dl.acm.org/citation.cfm?id=2994621},
@@ -299,12 +116,74 @@ To appreciate the severity and prevalence of this class of attack, the Open Web 
   groups = {Fingerprint}
 }
 
-@comment{jabref-meta: databaseType:biblatex;}
-@comment{jabref-meta: groupstree:
-0 AllEntriesGroup:;
-1 ExplicitGroup:Academic Writing\;0\;;
-1 ExplicitGroup:Fingerprint\;0\;;
-1 ExplicitGroup:Research Preparation\;0\;;
-1 ExplicitGroup:Software Evolution\;0\;;
+@article{nikiforakis2014workings,
+  title = {On the {{Workings}} and {{Current Practices}} of {{Web}}-{{Based Device Fingerprinting}}},
+  volume = {12},
+  issn = {1540-7993},
+  url = {http://ieeexplore.ieee.org/document/6679044/},
+  doi = {10.1109/MSP.2013.160},
+  timestamp = {2017-03-04T12:58:56Z},
+  number = {3},
+  journaltitle = {IEEE Security \& Privacy},
+  author = {Nikiforakis, Nick and Kapravelos, Alexandros and Joosen, Wouter and Kruegel, Christopher and Piessens, Frank and Vigna, Giovanni},
+  urldate = {2017-03-04},
+  date = {2014-05},
+  pages = {28--36}
 }
+
+@inproceedings{acar2013fpdetective:,
+  location = {{New York, NY, USA}},
+  title = {{{FPDetective}}: {{Dusting}} the {{Web}} for {{Fingerprinters}}},
+  isbn = {978-1-4503-2477-9},
+  url = {http://doi.acm.org/10.1145/2508859.2516674},
+  doi = {10.1145/2508859.2516674},
+  shorttitle = {{{FPDetective}}},
+  abstract = {In the modern web, the browser has emerged as the vehicle of choice, which users are to trust, customize, and use, to access a wealth of information and online services. However, recent studies show that the browser can also be used to invisibly fingerprint the user: a practice that may have serious privacy and security implications. In this paper, we report on the design, implementation and deployment of FPDetective, a framework for the detection and analysis of web-based fingerprinters. Instead of relying on information about known fingerprinters or third-party-tracking blacklists, FPDetective focuses on the detection of the fingerprinting itself. By applying our framework with a focus on font detection practices, we were able to conduct a large scale analysis of the million most popular websites of the Internet, and discovered that the adoption of fingerprinting is much higher than previous studies had estimated. Moreover, we analyze two countermeasures that have been proposed to defend against fingerprinting and find weaknesses in them that might be exploited to bypass their protection. Finally, based on our findings, we discuss the current understanding of fingerprinting and how it is related to Personally Identifiable Information, showing that there needs to be a change in the way users, companies and legislators engage with fingerprinting.},
+  timestamp = {2017-03-04T13:11:01Z},
+  booktitle = {Proceedings of the 2013 {{ACM SIGSAC Conference}} on {{Computer}} \& {{Communications Security}}},
+  series = {CCS '13},
+  publisher = {{ACM}},
+  author = {Acar, Gunes and Juarez, Marc and Nikiforakis, Nick and Diaz, Claudia and Gürses, Seda and Piessens, Frank and Preneel, Bart},
+  urldate = {2017-03-04},
+  date = {2013},
+  pages = {1129--1140},
+  keywords = {device fingerprinting,dynamic analysis,flash,javascript,privacy,tracking,web security},
+  file = {ACM Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/UZD4D2NZ/Acar et al. - 2013 - FPDetective Dusting the Web for Fingerprinters.pdf:application/pdf}
+}
+
+@inproceedings{boda2011user,
+  title = {User {{Tracking}} on the {{Web}} via {{Cross}}-{{Browser Fingerprinting}}},
+  url = {https://link-springer-com.ezproxy.elib10.ub.unimaas.nl/chapter/10.1007/978-3-642-29615-4_4},
+  doi = {10.1007/978-3-642-29615-4_4},
+  abstract = {The techniques of tracking users through their web browsers have greatly evolved since the birth of the World Wide Web, posing an increasingly significant privacy risk. An important branch of these methods, called fingerprinting, is getting more and more attention, because it does not rely on client-side information storage, in contrast to cookie-like techniques. In this paper, we propose a new, browser-independent fingerprinting method. We have tested it on a data set of almost a thousand records, collected through a publicly accessible test website. We have shown that a part of the IP address, the availability of a specific font set, the time zone, and the screen resolution are enough to uniquely identify most users of the five most popular web browsers, and that user agent strings are fairly effective but fragile identifiers of a browser instance.},
+  eventtitle = {Nordic Conference on Secure IT Systems},
+  timestamp = {2017-03-04T13:35:27Z},
+  langid = {english},
+  booktitle = {Information {{Security Technology}} for {{Applications}}},
+  publisher = {{Springer, Berlin, Heidelberg}},
+  author = {Boda, Károly and Földes, Ádám Máté and Gulyás, Gábor György and Imre, Sándor},
+  urldate = {2017-03-04},
+  date = {2011-10-26},
+  pages = {31--46},
+  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/APJXGRII/Boda et al. - 2011 - User Tracking on the Web via Cross-Browser Fingerp.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/B5852VD2/10.html:text/html}
+}
+
+@article{melicher2015(do,
+  title = {({{Do Not}}) {{Track Me Sometimes}}: {{Users}}’ {{Contextual Preferences}} for {{Web Tracking}}},
+  volume = {2016},
+  issn = {2299-0984},
+  url = {https://www.degruyter.com/view/j/popets.2015.2016.issue-2/popets-2016-0009/popets-2016-0009.xml},
+  doi = {10.1515/popets-2016-0009},
+  shorttitle = {({{Do Not}}) {{Track Me Sometimes}}},
+  abstract = {Online trackers compile profiles on users for targeting ads, customizing websites, and selling users’ information. In this paper, we report on the first detailed study of the perceived benefits and risks of tracking-and the reasons behind them-conducted in the context of users’ own browsing histories. Prior work has studied this in the abstract; in contrast, we collected browsing histories from and interviewed 35 people about the perceived benefits and risks of online tracking in the context of their own browsing behavior. We find that many users want more control over tracking and think that controlled tracking has benefits, but are unwilling to put in the effort to control tracking or distrust current tools. We confirm previous findings that users’ general attitudes about tracking are often at odds with their comfort in specific situations. We also identify specific situational factors that contribute to users’ preferences about online tracking and explore how and why. Finally, we examine a sample of popular tools for controlling tracking and show that they only partially address the situational factors driving users’ preferences.We suggest opportunities to improve such tools, and explore the use of a classifier to automatically determine whether a user would be comfortable with tracking on a particular page visit; our results suggest this is a promising direction for future work.},
+  timestamp = {2017-03-04T13:51:46Z},
+  number = {2},
+  journaltitle = {Proceedings on Privacy Enhancing Technologies},
+  author = {Melicher, William and Sharif, Mahmood and Tan, Joshua and Bauer, Lujo and Christodorescu, Mihai and Leon, Pedro Giovanni},
+  urldate = {2017-03-04},
+  date = {2015},
+  pages = {135--154},
+  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/G8NA8NQX/Melicher et al. - 2015 - (Do Not) Track Me Sometimes Users’ Contextual Pre.pdf:application/pdf}
+}
+
 
