Added related work section

--- a/content/content.tex
+++ b/content/content.tex
@@ -95,3 +95,39 @@ and serve you ads based on you chat history?
 Or is Facebook \textit{simply} making use of your fingerprint
 when you visit the link from the chat in your browser,
 and serve you ads based on your browsing history?
+
+\section{Related work}
+
+\subsection{Fingerprinting}
+
+Current technological possible ways of fingerprinting
+are being discussed in \cite{nikiforakis2014workings}.
+They highlight the possibilities of current fingerprinters,
+of plug-ins that prevent you from being tracked
+and of their shortcomings.
+
+\subsection{FPDetect}
+
+Instead of defending against known fingerprinters
+and fingerprinting techniques,
+\cite{acar2013fpdetective} developed a framework
+for detecting active fingerprinters.
+They found out
+that much more fingerprinters are active then previously expected.
+
+\subsection{Basic fingerprinting}
+
+This article discusses basic fingerprinting
+by making use of only IP address, fonts, timezone and screen resolution.
+\cite{boda2011user}
+
+\section{Tracking preferences}
+
+Mostly directed towards the perception by users of being tracked
+and their preference therein.
+\cite{melicher2015(do}
+They also discuss current tools to take control over you being tracked
+and their limitations.
+Concluding with a suggestion on how to determine
+how much a user would like to be tracked in a certain situation
+and how to enforce this preference.
